Implement basic options chart

--- a/example/test/assets/.prettierrc
+++ b/example/test/assets/.prettierrc
@@ -4,7 +4,7 @@
   "semi": false,
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "jsxBracketSameLine": false,
+  "bracketSameLine": false,
   "quoteProps": "as-needed",
   "printWidth": 80
 }
